--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -6,12 +6,13 @@
     android:orientation="horizontal"
     android:padding="22dp"
     android:gravity="center_vertical"
+
     >
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="clickMenu"
+        android:onClick="clickSideBar"
         android:src="@drawable/ic_menu" />
 
     <TextView
