--- a/app/src/main/res/layout/activity_landing_screen.xml
+++ b/app/src/main/res/layout/activity_landing_screen.xml
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_width="351dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:textColor="#fff"
