--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,8 @@
         android:background="@drawable/editxt_background"
         android:hint="Enter your email"
         android:layout_marginTop="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#433F3F"
         android:inputType="textEmailAddress"
         android:id="@+id/email"
         android:padding="10dp"
@@ -37,6 +39,8 @@
         android:hint="Enter your password"
         android:layout_marginTop="15dp"
         android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:textColorHint="#433F3F"
         android:id="@+id/password"
         android:padding="10dp"
         android:autofillHints="" />
@@ -54,16 +58,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Reset Your Password"
-        android:id="@+id/txt_forgot_pwd"
-        android:textSize="15sp"
-        android:layout_marginTop="20dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="Do not have an account? Register"
         android:id="@+id/txt_signup"
+        android:textColor="@color/black"
+        android:textSize="16dp"
         android:layout_marginTop="20dp" />
 
 
