--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Life After Varsity"
+        android:textColor="@color/black"
         android:textStyle="italic"
         android:textSize="20dp"
         android:textAlignment="center"
@@ -50,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:text="Dashboard" />
 
@@ -74,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:text="Profile" />
 
@@ -98,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:text="Notes" />
 
@@ -122,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:text="Logout" />
 
